add cafe and hotel to output